[package]
name = "codemov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
glob = "0.3.0"
clap = { version = "3.2.20", features = ["derive"] }
open = "3.0.2"
codevis = "0.3.1"
prodash = { version = "20.0.1", features = ["render-line", "render-line-crossterm", "signal-hook", "render-line-autoconfigure", "progress-tree", "unit-bytes"] }