[package]
name = "codemov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
glob = "0.3.1"
clap = { version = "4.2.7", features = ["derive"] }
open = "4.1.0"
codevis = { path = "../codevis" }
prodash = { version = "20.0.1", features = ["render-line", "render-line-crossterm", "signal-hook", "render-line-autoconfigure", "progress-tree", "unit-bytes"] }
syntect = "5.0.0"
kdam = "0.4.0"
